XCode project setup

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ references/relevant_repos/ChordRecGen/
 references/relevant_repos/dechorder/
 swift_libs/AudioKit/
 swift_libs/Tonic/
+references/relevant_repos/omnizart/
