FFT-based chord detection with chromagram and template matching

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@ references/relevant_repos/dechorder/
 swift_libs/AudioKit/
 swift_libs/Tonic/
 references/relevant_repos/omnizart/
+.DS_Store
+references/relevant_repos/df0/
