add sub folder to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # Amadeus Fresh (duplicate project folder)
 Amadeus-Fresh/
 
+# Submission Folder
+Formative_Submission_Facundo-Franchino/
+
 # macOS
 .DS_Store
 .DS_Store?
